--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-workflow",
+  "name": "webpack-colic-calm",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
